# vrc_udon_shit

./: .gitignore  CodegenInfo.cs  FodyWeavers.xml  HeapWrapper.cs  LightweightStack.cs  NativeInterpreterApi.cs  README.md  SpanHelper.cs  SpecialCases.cs  UdonDynarec.cs  UdonHeapReimpl.cs  UdonModules.cs  UdonShit.cs  Unsafe.cs  rust-toolchain.toml  vrc_udon_shit.csproj
native/: .gitignore  Cargo.toml  build.rs  exceptionwrap.cpp
native/src/: delegate.rs  dynarec.rs  emit.rs  il2cpp_array.rs  il2cpp_class.rs  il2cpp_method.rs  il2cpp_object.rs  il2cpp_string.rs  interpreter.rs  lib.rs  method_info.rs  recompiler.rs  span.rs  strongbox.rs  udon_types.rs
native/src/vm/: analysis.rs  dynarec.rs  emit.rs  interpreter.rs  mod.rs
