[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.112"
rustc-hash = "1.1.0"
num-traits = "0.2.14"
num-derive = "0.3.3"
dynasmrt = "1.2.1"

[build-dependencies]
cc = "1.0"

[lib]
crate-type = ["cdylib", "rlib"]
